@startuml ERD_Waveul
!theme plain

entity "users" {
  * id: integer
  --
  * name: varchar(100)
  * last_name: varchar(100)
  * username: varchar(50)
  * password_hash: varchar(255)
  * email: varchar(150)
  * profile_image: varchar(255)
  * birth_date: date
  * phone: varchar(20)
  * created_at: datetime
  * is_verified: boolean
  * last_login: datetime
  * verification_token: varchar(100)
  * reset_token: varchar(100)
  * reset_token_expires: datetime
}

entity "admins" {
  * id: integer
  --
  * user_id: integer
  * role: varchar(50)  ' Ej: superadmin, moderador
  * created_at: datetime
}

entity "artists" {
  * id: integer
  --
  * stage_name: varchar(100)
  * is_band: boolean
  * biography: text
  * profile_image: varchar(255)  
  * formed_date: date
}

entity "albums" {
  * id: integer
  --
  * name: varchar(150)
  * release_date: date
  * cover_image: varchar(255)
  * artist_id: integer
}

entity "album_song"{
  * id: integer
  --
  * album_id: integer
  * song_id: integer  
}

entity "songs" {
  * id: integer
  --
  * name: varchar(150)
  * duration: integer
  * file_url: varchar(255)  
  * release_date: date
  * album_id: integer
  * play_count_global: integer
}

entity "genres" {
  * id: integer
  --
  * name: varchar(50)
  * description: text
}

entity "song_genre" {
  * id: integer
  --
  * song_id: integer
  * genre_id: integer
}

entity "song_artist" {
  * id: integer
  --
  * song_id: integer
  * artist_id: integer
}

entity "user_song" {
  * id: integer
  --
  * user_id: integer
  * song_id: integer
  * play_count: integer
  * last_played: datetime
  * favorite: boolean
  * liked_at: datetime
}

entity "playlists" {
  * id: integer
  --
  * user_id: integer
  * name: varchar(100)
  * description: text
  * cover_image: varchar(255)
  * is_public: boolean
  * save_in: integer
  * created_at: datetime
}

entity "playlist_user"{
  *id: integer
  --
  * playlist_id: integer
  * user_id: integer  
}

entity "playlist_song" {
  * id: integer
  --
  * playlist_id: integer
  * song_id: integer
  * added_at: datetime
  * order: integer
}

entity "reviews" {
  * id: integer
  --
  * user_id: integer
  * song_id: integer
  * rating: integer
  * comment: text
  * likes: integer
  * created_at: datetime
}

entity "review_likes" {
  * id: integer
  --
  * review_id: integer
  * user_id: integer
  * created_at: datetime
}

entity "reports" {
  * id: integer
  --
  * user_id: integer
  * content_type: varchar(20)  ' Ej: song, review, playlist
  * content_id: integer
  * reason: text
  * created_at: datetime
}

' ------------------
' NUEVAS ENTIDADES
' ------------------

entity "user_follow_user" {
  * id: integer
  --
  * follower_id: integer
  * followed_user_id: integer
  * created_at: datetime
}

entity "user_follow_artist" {
  * id: integer
  --
  * user_id: integer
  * artist_id: integer
  * created_at: datetime
}

entity "playlist_likes" {
  * id: integer
  --
  * user_id: integer
  * playlist_id: integer
  * created_at: datetime
}

entity "playlist_reviews" {
  * id: integer
  --
  * user_id: integer
  * playlist_id: integer
  * rating: integer
  * comment: text
  * likes: integer
  * created_at: datetime
}

entity "user_pins" {
  * id: integer
  --
  * user_id: integer
  * content_type: varchar(20)  ' song, playlist, artist
  * content_id: integer
  * pinned_at: datetime
}

' ------------------
' RELACIONES
' ------------------

users "1" -- "*" user_song
users "1" -- "*" playlists
users "1" -- "*" playlist_user
users "1" -- "*" reviews
users "1" -- "*" review_likes
users "1" -- "*" reports
users "1" -- "1" admins

songs "1" -- "*" user_song
songs "1" -- "*" playlist_song
songs "1" -- "*" song_genre
songs "1" -- "*" reviews

artists "1" -- "*" albums
artists "1" -- "*" song_artist

albums "1" -- "*" album_song

songs "1" -- "*" song_artist
songs "1" -- "*" album_song

genres "1" -- "*" song_genre

playlists "1" -- "*" playlist_song
playlists "1" -- "*" playlist_user

' Nuevas relaciones
users "1" -- "*" user_follow_user : "follower"
users "1" -- "*" user_follow_user : "followed"
users "1" -- "*" user_follow_artist
artists "1" -- "*" user_follow_artist

users "1" -- "*" playlist_likes
playlists "1" -- "*" playlist_likes

users "1" -- "*" playlist_reviews
playlists "1" -- "*" playlist_reviews

users "1" -- "*" user_pins

' ------------------
' NOTAS
' ------------------

note right of reports
  content_type indica qué se reporta:
  - song
  - review
  - playlist
  content_id apunta al ID real.
end note

note right of artists
  stage_name permite artistas solistas o bandas.
  is_band = true para grupos, false para solistas.
  formed_date: fecha de formación de la banda
end note

note right of song_artist
  Relación N:M entre canciones y artistas
  (para colaboraciones, feats, etc.)
end note

note right of playlists
  Cada usuario puede tener varias playlists.
  - is_public: true para playlists públicas
  - save_in: el número de playlists guardadas
end note

note right of user_song
  Historial de reproducción y "me gusta"
  para cada usuario en cada canción.
end note

note right of album_song
  La misma canción puede estar en múltiples álbumes,
  como recopilatorios o "mejores hits".
end note

note right of user_follow_user
  Tabla específica para seguir a otros usuarios.
  follower_id -> quien sigue
  followed_user_id -> a quien siguen
end note

note right of user_follow_artist
  Tabla específica para seguir artistas.
end note

note right of playlist_likes
  Permite dar "me gusta" a playlists.
end note

note right of playlist_reviews
  Permite dejar reseñas a playlists
  igual que con canciones.
end note

note right of user_pins
  Sistema genérico de "pines".
  - content_type: song, playlist, artist
  - content_id: ID del contenido pineado
end note

@enduml
